# zed

./: Cargo.toml
crates/code_comments/: Cargo.toml
crates/code_comments/src/: agent_integration.rs  code_comments.rs  comment_card.rs  comment_settings.rs  comment_store.rs  comment_sync.rs  inline_comments.rs  persistence.rs  registry.rs  sync_custom.rs  sync_github.rs
crates/settings/src/: vscode_import.rs
crates/settings_content/src/: code_comments.rs  settings_content.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs
