[package]
name = "code_comments"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/code_comments.rs"

[dependencies]
anyhow.workspace = true
collections.workspace = true
db.workspace = true
gpui.workspace = true
log.workspace = true
util.workspace = true
uuid.workspace = true
workspace.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
