[package]
name = "code_comments"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/code_comments.rs"

[dependencies]
anyhow.workspace = true
collections.workspace = true
db.workspace = true
editor.workspace = true
gpui.workspace = true
language.workspace = true
log.workspace = true
multi_buffer.workspace = true
project.workspace = true
text.workspace = true
ui.workspace = true
util.workspace = true
uuid.workspace = true
workspace.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
